Fixed incorrect post tags spacing issue.

--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: #27373a;
-  font: 18px/1.4 $helvetica;
+  font: 1em $helvetica;
   color: #9aaf73;
 }
 
@@ -249,12 +249,13 @@ nav {
 
 .postTag {
   font-size: 0.8em;
+  text-align: center;
   color: #b1998f;
   background-color: #443f3d;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 0.025em;
-  padding-left: 0.2em;
-  padding-right: 0.2em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
 }
 
 .posts > .post:last-child {
@@ -265,15 +266,15 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 0.1em solid $gray;
     padding: 0.1em 1em;
     color: $gray;
-    font-size: 22px;
+    font-size: 1.1em;
     font-style: italic;
   }
 
   .comments {
-    margin-top: 10px;
+    margin-top: 0.5em;
   }
 
   .read-more {
